--- a/advisor/templates/advisor/mobile_index.html
+++ b/advisor/templates/advisor/mobile_index.html
@@ -203,6 +203,7 @@
 
     <!-- Chat Area -->
     <div id="chat-window-mobile" class="px-4 pb-20">
+        {% csrf_token %}
         <!-- Beta Testing Welcome Message -->
         <div id="beta-welcome-mobile" class="mobile-card mb-4" style="display: none;">
             <div class="text-center">
