--- a/advisor/templates/advisor/mobile_portfolio.html
+++ b/advisor/templates/advisor/mobile_portfolio.html
@@ -260,25 +260,25 @@
 <!-- Bottom Navigation -->
 <nav class="bottom-nav">
     <div class="flex justify-around">
-        <a href="/" class="nav-item" id="nav-chat">
+        <a href="/mobile/" class="nav-item" id="nav-chat">
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
             </svg>
             <span class="text-xs">Chat</span>
         </a>
-        <a href="/portfolio/" class="nav-item active" id="nav-portfolio">
+        <a href="/mobile/portfolio/" class="nav-item active" id="nav-portfolio">
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
             </svg>
             <span class="text-xs">Portfolio</span>
         </a>
-        <a href="/about/" class="nav-item" id="nav-about">
+        <a href="/mobile/about/" class="nav-item" id="nav-about">
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
             <span class="text-xs">About</span>
         </a>
-        <a href="/profile/" class="nav-item" id="nav-profile">
+        <a href="/mobile/profile/" class="nav-item" id="nav-profile">
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
             </svg>
